--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "2.0.1",
+    "@date-io/dayjs": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mantine/core": "^7.16.2",
     "@mantine/dates": "^7.16.2",
     "@mantine/form": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
+    "@mui/lab": "^6.0.0-beta.26",
     "@mui/material": "^6.4.3",
+    "@mui/x-date-pickers": "^7.26.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "esri-leaflet-geocoder": "2.3.3",
+    "formik": "^2.4.6",
     "framer-motion": "^10.8.5",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
@@ -34,7 +38,9 @@
     "react-router-dom": "6.10.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "world-countries": "^5.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
