--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,5 +6,8 @@
     ],
     "routes": [
         { "src": "/(.*)", "dest": "/" }
-    ]
+    ],
+    "env": {
+        "NODE_VERSION": "20.2.0"
+    }
 }
